<resources>
    // Application data (name, version etc.)
    <string name="app_name">MyTodoList</string>
    <string name="app_author">Glebster-D</string>
    <string name="app_version">1.0.0</string>

    // Shared preferences values


    <string name="settings">Settings</string>
<!--    <string name="add_edit_event"></string>-->

    // Database
    <string name="db_name">event_database</string>


    // Titles of EventOperationFragment elements
    <string name="tv_title_label">Event title:</string>
    <string name="et_title_hint">Add event title</string>
    <string name="tv_description_label">Event description:</string>
    <string name="et_description_hint">Add event description</string>
    <string name="tv_date_label">Date:</string>
    <string name="et_date_hint">Tap to add date</string>
    <string name="tv_time_label">Time:</string>
    <string name="et_time_hint">Tap to add time</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <string name="fragment_add_title">Add event</string>
    <string name="fragment_edit_title">Edit event</string>

    // Title of empty MainListFragment
    <string name="tv_empty_list_label">Your list is empty</string>

    // Titles of RecycleView Item elements (DELETE AFTER DEBUGGING THIS STRINGS AND USAGE IN XML LAYOUT!!!!!)
    <string name="date">Date</string>
    <string name="time">Time</string>


    // Titles of preference categories
    <string name="pref_category_alarm_settings_title">Notification Settings</string>
    <string name="pref_category_about_title">About</string>

    // Values for preferences
    <string name="pref_alarm_check_title">Enable notifications</string>
    <string name="pref_alarm_check_summary">Enables notification settings</string>
    <string name="pref_alarm_check_key">alarm_enable_check</string>

    <string name="pref_alarm_time_title">Set notification reminder time</string>
    <string name="pref_alarm_time_summary">Reminder time:</string>
    <string name="pref_alarm_time_default">5 minutes</string>
    <string name="pref_alarm_time_key">reminder_time</string>

    // Values for Dropdown list preference
    <string name="pref_alarm_time_0_minutes">0 minutes</string>
    <string name="pref_alarm_time_5_minutes">5 minutes</string>
    <string name="pref_alarm_time_10_minutes">10 minutes</string>
    <string name="pref_alarm_time_15_minutes">15 minutes</string>
    <string name="pref_alarm_time_20_minutes">20 minutes</string>
    <string name="pref_alarm_time_25_minutes">25 minutes</string>
    <string name="pref_alarm_time_30_minutes">30 minutes</string>
    <string name="pref_alarm_time_35_minutes">35 minutes</string>
    <string name="pref_alarm_time_40_minutes">40 minutes</string>
    <string name="pref_alarm_time_45_minutes">45 minutes</string>
    <string name="pref_alarm_time_50_minutes">50 minutes</string>
    <string name="pref_alarm_time_55_minutes">55 minutes</string>
    <string name="pref_alarm_time_60_minutes">60 minutes</string>

    <string name="pref_alarm_sound_title">Set notification sound</string>
    <string name="pref_alarm_sound_summary">Notification sound:</string>
    <string name="pref_alarm_sound_default">content://settings/system/notification_sound</string>
    <string name="pref_alarm_sound_key">alarm_sound</string>

    <string name="pref_about_author_title">Developed by:</string>
    <string name="pref_about_version_title">Version</string>

    // Snackbar and Toast messages
    <string name="event_was_added">Event was added</string>
    <string name="event_was_updated">Event was updated</string>
    <string name="cannot_save_empty_event">Cannot save empty event</string>

    //Notifications
    <string name="channel_id">to_do_notification_channel</string>
    <string name="channel_name">Main notification</string>
    <string name="channel_description">This is the main notification channel for this app. If you disable it the notifications will not appear.</string>


</resources>
