<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <!-- android:background="@android:color/black" -->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_EventTitle"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/tv_title_label"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_EventTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/et_title_hint"
        android:textColor="@android:color/black"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:background="@drawable/rounded_corner_light_textview"
        android:inputType="textPersonName"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/tv_EventDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_EventTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_EventDescription"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/tv_description_label"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_EventTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_EventDescription"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner_light_textview"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/et_description_hint"
        android:textColor="@android:color/black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textMultiLine"
        android:maxLength="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_EventDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_EventDate"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/tv_date_label"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_EventTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_EventDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/et_EventDate"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corner_light_textview"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/et_date_hint"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/et_EventTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_EventDate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_EventTime"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/tv_time_label"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_EventDate"
        app:layout_constraintTop_toBottomOf="@+id/et_EventDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/et_EventTime"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner_light_textview"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:clickable="true"
        android:textColor="@android:color/black"
        android:ems="10"
        android:focusable="true"
        android:gravity="center_vertical"
        android:hint="@string/et_time_hint"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_EventDate"
        app:layout_constraintTop_toBottomOf="@+id/tv_EventTime" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_Cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="238dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/btn_cancel"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_Save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_Save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/btn_save"
            android:textAlignment="center"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>